# bootcamp_lv_python_aula17_desafio

./: README.md  desadio.db  desafio.py  desafio_query.py  pyproject.toml
